// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render An error should be logged if no onPress or title given 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
    ]
  }
>
  <Touchable
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onPress={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#17b6b0",
          "fontSize": 18,
        }
      }
    />
  </Touchable>
</View>
`;

exports[`Render SecondaryButton should render without crashing 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
    ]
  }
>
  <Touchable
    hitSlop={
      Object {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      }
    }
    onPress={[Function]}
  >
    <Text
      style={
        Object {
          "color": "#17b6b0",
          "fontSize": 18,
        }
      }
    >
      Test
    </Text>
  </Touchable>
</View>
`;
